# Tops

./: .gitignore
Core python/Assessment1/: ATM.py  fruit_manager.py  main.py  practice.ipynb
Core python/Collections/: Tuple.ipynb  sets_dict.ipynb
Core python/Concepts/: Functions.ipynb  file_exception_handling.ipynb  oops.ipynb  sample.txt  string.ipynb
Deep Learning/Assessment/: App.py
Deep Learning/Assignments/: Task1.ipynb
Deep_Learning/Assessment/: Cat_Dog_Classification.ipynb  model2.h5  requirements.txt
Deep_Learning/Assignments/Task_2/: Digit_recognizer.ipynb  app.py  mnist_cnn.h5
Deep_Learning/Project/: App.py  Emotion_detection_project.ipynb  pyproject.toml  requirements.txt  requirements.txt.txt  resnet50_model_new.h5  runtime.txt
Deep_Learning/Project/emotion_detection_project/: __init__.py  app.py
Deep_Learning/Project/images/images/train/: gpy.ipynb
Machine Learning/Supervise ML/Task_1 - Regression/: Assignment.ipynb
Machine Learning/Supervise ML/Task_2 - Classification/: Assignmet.ipynb
Machine Learning/Unsupervise ML/: Assignment.ipynb
Python/: Dapassi_3.ipynb
Python/Core python/Assesment 2/: numpy.ipynb
Python/Core python/Assessment1/: ATM.py
Python/Core python/Assignment.1/: Ass1.ipynb
Python/Data Analysis/Assessment/: numpy.ipynb  pandas.ipynb  synthetic_dataset.csv
Python/Data Analysis/Assignment/: ass1 copy.ipynb  ass1.ipynb  k.ipynb
Python/Data Science assessment/: assessment.ipynb  imdb_top_5000_tv_shows.csv
Python/Data Science assessment/Netflix/: Netflix_analysis.ipynb
Python/Numpy/: Numpy_assignment.ipynb
SQL/: Assignment.1.sql  DB1.sql  HRDB.sql  Window function.sql
Soft Skill/Assignment/: Soft_skill.docx
