[tool.poetry]
name = "emotion-detection-project"
version = "0.1.0"
description = "Emotion detection project (migrated from requirements.txt to Poetry pyproject)"
authors = ["Zeel Mistry <mistryzeel21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "*"
tensorflow = "2.12.0"
numpy = "*"
pandas = "*"

[tool.poetry.dev-dependencies]
# Add dev dependencies here, e.g. pytest

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
